# callmetk-os

./: .gitignore  CHANGELOG.md  LICENSE  README.md  catalog.csv  pyproject.toml
.github/workflows/: ci.yml
data/: music.csv
docs/: CATALOG_SYSTEM.md  CTK_CORE.md  NAMING_AND_CSV.md  PROJECT_FACTORY.md  TROUBLESHOOTING.md
docs/architecture/: CTK_OS_CONSTITUTION.md  DID_FRAMEWORK_PLACEHOLDER.md  TOAST_AI_STANDARD.md
docs/governance/: DOCUMENTATION_MAP.md  GIT_CONTENT_POLICY.md
docs/music/: AUDIO_ANALYSIS.md  CREATIVE_DNA.md  EP_BUILDER.md  MUSIC_INTELLIGENCE.md  TOAST_MUSIC.md
scripts/: install-local.sh
src/ctk/: __init__.py  catalog.py  checks.py  cli.py  csv_system.py  naming.py  project_factory.py
src/ctk/core/: __init__.py  ai_manager.py  config.py  library.py  providers.py  toast.py  workspace.py
src/ctk/music/: __init__.py  analyzer.py  cluster.py  dna.py  ep_builder.py
templates/ai-app/: README.md  app.py
templates/education-tool/: .gitignore  CHANGELOG.md  README.md  lesson-plan.md
templates/game/: CHANGELOG.md  README.md  game.yaml
templates/game/data/: achievements.csv  catalog.csv  dialogue.csv  items.csv  levels.csv  music.csv
templates/game/docs/: game-design.md
templates/game/src/: main.py
templates/music-release/: README.md  release-plan.md
templates/website/: README.md  index.html
tests/: test_cli.py  test_core.py  test_music_intelligence.py  test_project_factory.py
