[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callmetk-os"
version = "0.7.0"
description = "CallMeTK OS developer toolkit for creating, publishing, and managing creative software projects."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CallMeTK"}]

[project.optional-dependencies]
music = [
  "librosa>=0.10",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "soundfile>=0.12",
]
dev = ["pytest>=8"]

[project.scripts]
ctk = "ctk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ctk*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
